--- a/OsGuriDaCatequese/index.html
+++ b/OsGuriDaCatequese/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet"href="style.css">
 </head>
 <body>
-    
+    <section class="container principal">
+        <h1>Com o Combo+, você pode aproveitar a ProStream+ e o EliteStream por um preço único.</h1>
+        <img src="" alt="img/1.png">
+        <a class= 'container-botao' href= "https://youtube.com">Plano elitestream assine por R$19,99</a>
+    </section>
 </body>
 </html>
