--- a/OsGuriDaCatequese/index.html
+++ b/OsGuriDaCatequese/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <section class="container principal">
-        <h1>Com o Combo+, você pode aproveitar a ProStream+ e o EliteStream por um preço único.</h1>
-        <img src="" alt="img/1.png">
+    <div>
+        <h1> Com o Combo+, você pode aproveitar a ProStream+ e o EliteStream por um preço único.</h1>
         <a class= 'container-botao' href= "https://youtube.com">Plano elitestream assine por R$19,99</a>
+        <p class="container-aviso"> login register </p>
+    </div>
+
     </section>
 </body>
 </html>
