--- a/OsGuriDaCatequese/index.html
+++ b/OsGuriDaCatequese/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <section class="container principal">
-    <div>
-        <h1> Com o Combo+, você pode aproveitar a ProStream+ e o EliteStream por um preço único.</h1>
+    <div class="divisoria">
+        <h1 class="nome"> Com o Combo+, você pode aproveitar a ProStream+ e o EliteStream por um preço único.</h1>
+        <p>Com ProStream+ voçê pode assistir séries e filmes em ótima qualidade, 5 pessoas podem utilizar ao mesmo tempo.</p>
         <a class= 'container-botao' href= "https://youtube.com">Plano elitestream assine por R$19,99</a>
-        <p class="container-aviso"> login register </p>
+        <a class="container-botao botao-secundario" href="https://www.youtube.com/watch?v=LJCVaD08W_U">Assinar somente o ProSteam+</a>
+        <p class="container-aviso">  </p>
+
     </div>
 
     </section>
