--- a/OsGuriDaCatequese/index.html
+++ b/OsGuriDaCatequese/index.html
@@ -17,6 +17,32 @@
 
     </div>
 
-    </section>
+    
+</section>
+    
+
+]<section class="container secundario">
+<img src="img/Plataformas.png" alt=""> </img>
+<div>
+    <h2 class="descricao-titulo">Assista do seu jeito</h2>
+    <p class="descricao-texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de filmes e séries não para de crescer.</p>
+</div>
+</section>
+
+<section>
+    <img src="img/Notebook.png" alt=""></img>
+    <div>
+        <p>Só o ProStream+ o EliteStream juntos para você ter acesso a filmes de diversas áreas, ação, terror ou comédia, onde e como quiser.</p>
+    </div>
+</section>
+
+
+
+<section class="">
+    <img src="img/horror-4 1.png" alt=""></img>
+    <div>
+        <h2>Os melhores filmes de Terror voçê acha aqui,com EliteStream</h2>
+    </div>
+</section>  
 </body>
 </html>
