--- a/OsGuri-main/OsGuri-main/OsGuriDaCatequese/index.html
+++ b/OsGuri-main/OsGuri-main/OsGuriDaCatequese/index.html
@@ -29,20 +29,61 @@
 </div>
 </section>
 
-<section>
-    <img src="img/Notebook.png" alt=""></img>
-    <div>
-        <p>Só o ProStream+ o EliteStream juntos para você ter acesso a filmes de diversas áreas, ação, terror ou comédia, onde e como quiser.</p>
+<section class="container secundario">
+    <img src="img/Notebook.png" alt="" class="secundario-imagem"></img>
+    <div class="container-descricao">
+        <p class="descricao-texto">Só o ProStream+ o EliteStream juntos para você ter acesso a filmes de diversas áreas, ação, terror ou comédia, onde e como quiser.</p>
     </div>
 </section>
 
 
 
-<section class="">
-    <img src="img/horror-4 1.png" alt=""></img>
-    <div>
-        <h2>Os melhores filmes de Terror voçê acha aqui,com EliteStream</h2>
+<section class="container secundario">
+    <img src="img/horror-4 1.png" alt="" class="secundario-imagem2"></img>
+        <h2 class="descricao-texto2">Os melhores filmes de Terror voçê acha aqui,com EliteStream</h2>
     </div>
-</section>  
+</section>
+
+
+
+
+<section class="dispositivos">
+<h2 class="dispositivos-titulo">Disponível nos seus dispositivos favoritos</h2>
+<ul class="dispositivos-lista">
+    <li>
+        <img src="img/tv.png" alt="tv">
+        <h3 class="lista-item">tv</h3>
+    </li>
+
+    <li>
+        <img src="img/computador.png" alt="tv">
+        <h3 class="lista-item">Computador</h3>
+    </li>
+
+    <li>
+        <img src="img/celular.png" alt="tv">
+        <h3 class="lista-item">Celulares e Tablets</h3>
+    </li>
+</ul>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
 </body>
 </html>
